wwr/styles/rafting.css
* {
    box-sizing: border-box;
    text-decoration: none;
    font-family: "Manrope", sans-serif;
    font-weight: 400;
}

:root {
    --primary-color: #E1882C;
    --secondary-color: #1D1A05;
    --transparent-secondary: #1D1A05E6;
    --accent1-color: #3E7977;
    --accent2-color: #FFFFC5;
    --transparent-accent2: #FFFFC5BF;
    --text-width: 70%;
    --content-border: 2px dashed var(--primary-color);
    --image-border: 2px solid var(--accent1-color);
}

header {
    display: grid;
    grid-template-columns: 40% 50% 10%;
}

header img {            /*logo*/
    width: 200px;
    height: auto;
    grid-column: 1/2;
    margin: 0 auto;
}

header nav {
    grid-column: 2/3;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    background-color: var(--transparent-accent2);
    border: var(--content-border);
    margin: 30px;
}

header a {
    text-align: center;
    font-size: larger;
}

h1 {
    font-family: "Calistoga", serif;
    font-weight: 400;
    color: var(--primary-color);
    padding: 1rem;
    text-align: center;
}

h2 {
    font-family: "Manrope", sans-serif;
    font-weight: 700;
    color: var(--accent1-color);
    padding: 0 1rem;
    text-align: center;
}

p {
    padding: 10px;
    color: var(--secondary-color);
    font-size: larger;
}

.hero div{
    position: relative;
}

.hero img {          /*big hero image*/
    display: block;
    width: 100%;
    height: auto;
}

.hero h1 {
    position: absolute;
    top: 30%;
    font-family: "Calistoga", serif;
    font-weight: 400;
    color: var(--primary-color);
    padding: 1rem;
    background-color: var(--transparent-secondary);
    width: 100%;
    text-align: center;
}

.hero article {
    position: absolute;
    width: var(--text-width);
    left: 15%;
    top: 55%;
    background-color:var(--transparent-accent2);
}
article img{       /*small image in yellow article*/
    max-width: 200px;
    float: right ;
    margin: 1rem;
    border: var(--image-border);
    padding: 0;
}

.history, .border{
    background-color: var(--transparent-accent2);
    border: var(--content-border);
    margin: 30px;
    padding: 1rem;
}

.grid-container{
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    align-items: center;
    
}

.grid-container img{   /*image between history paragraphs*/
    width: 400px;
    height: auto;
    border: var(--image-border);
    margin: 0;
}

.adventure-gallery, .double-columns, .triple-columns{
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    gap: 10px;
    margin: 30px 0;
}

figure{
    text-align: center;
    margin: 0;
}

figure img{          /*images in adventure gallery*/
    width: 100%;
    max-width: 300px;
    height: auto;
    border: var(--image-border);
    padding: 0;
}

.double-columns p{
    font-weight: bold;
}

iframe{
    width: 600px;
    height: 300px;
    padding: 0;
    border: var(--image-border);
}

.triple-columns img{
    width: 600px;
    height: auto;
}

form{
    width: 40%;
    margin: 0 auto;
    padding: 1rem;
    border: var(--content-border);
    border-radius: 0.5rem;
    background-color: var(--transparent-accent2);
    display: grid;
}

form p{
    font-size: medium;
    margin: 0;
}

fieldset{
    display: grid;
    grid-gap: 0.5rem;
    margin: 1rem;
    border: var(--image-border);
    border-radius: 0.5rem;
    padding: 1rem;
}

legend{
    font-weight: bold;
    font-size: larger;
    color: var(--accent1-color);
}

.column2 label{
    text-align: right;
    padding-right: 1rem;
}

.column1 label, input[type="radio"] label{
    text-align: left;
    padding-left: 1rem;
}

input, textarea{
    padding: 0.5rem;
    font-size: large;
}

input[type="checkbox"]{
    width: 20px;
    height: 20px;
}

.form-item{
    display: grid;
    align-items: center;
}

.column1{
    display: grid;
    grid-template-columns: 3fr 1fr;
    margin: 0.5rem 0;
}

.form-item.column1 {
    display: grid;
    grid-template-columns: 1fr;
    gap: 0.5rem; /* Vertical space between radio buttons */
}

.form-item.column1 input[type="radio"] {
    margin-right: 0.5rem; /* Space between radio button and label */
}

.form-item.column1 label {
    display: inline-block;
}

.form-item.checkbox-container {
    display: inline-flex;
    align-items: center; /* Ensures checkbox and label are vertically aligned */
    gap: 0.5rem; /* Adds a bit of spacing between checkbox and label */
}

.form-item.column1 label {
    display: inline-block;
    vertical-align: middle;
}

.column2{
    display: grid;
    grid-template-columns: 1fr 2fr;
    margin: 0;
}

.textarea label{
    text-align: left;
}

button{
    width: 200px;
    margin: 0 auto;
    background-color:#fddcbc;
    border: 2px solid var(--primary-color);
    border-radius: 0.5rem;
    font-size: large;
    padding: 0.5rem;
}

button:hover{
    background-color: var(--primary-color);
}

footer{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    border-top: var(--content-border);
    margin: 1rem;
}

footer p{
    text-align: center;
    grid-column: 2/3;
}

footer nav{
    display: flex;
    justify-content: end;
    grid-column: 3/4;
}

.foot img{       /*social media icons*/
    margin: 10px;
}

